# deska

./: .gitignore  CMakeLists.txt  CTestConfig.cmake  DeskaDividedBox.qml  FindReadline.cmake  README  UseLATEX.cmake  build.sh  deska.ini  deska.spec  deska_logo.eps  git-generate-version.sh  pgpython.spec  rack.qml  run-deska.sh  run-standalone-tests.sh
doc/: .gitignore
doc/cli/: boost.txt  demonstration  example-dump  example-usage
doc/cli/example-usages/: dump  usage
doc/db/: TODO.txt  create.sql  create_schemas.sql  deferrable_constraints.sql  fn-get_schema.sql  generator-requirements.txt  how-to-db-schema.sql  how-to-swap-ips.sql  how-to-xml-column.sql  modules_rules.txt  notes.txt  otazky.txt  table.py  test_structurefn.sql  vendor_create.sql  vendor_drop.sql  vendor_test.sql  versionlib.sql
doc/db/exceptions/: exception  exception.sql
doc/db/pgtap/: README.txt  test_fn-get-schema.sql
doc/db/pgunit/: PGUnit.sql  (+1 more)
doc/farmdb/: convert.py  create_tables.txt  dbo.Aliases.Table.sql  dbo.DeletedItems.Table.sql  dbo.Faults.Table.sql  dbo.Hardware.Table.sql  dbo.HistoryEvents.Table.sql  dbo.Interfaces.Table.sql  dbo.Machines.Table.sql  dbo.Networks.Table.sql  dbo.Services.Table.sql  dbo.ServicesToMachines.Table.sql  dbo.Vendors.Table.sql  deunicodeify.sh  dump-farmdb-2011-04-14.sql  hardware.sql.csv  interfaces.sql.csv  machines.sql.csv  networks.sql.csv  services.sql.csv  vendors.sql.csv
doc/minutes/: 2009-10-13  2009-10-20  2009-10-27  2009-11-06-Lyon  2009-11-10  2009-11-24  2009-12-01  2009-12-08  2009-12-15  2010-01-05  2010-03-03  2010-03-15  2010-03-24  2010-03-29  2010-04-08  2010-04-12  2010-05-03  2010-05-04-users-at-fzu.tex  2010-05-17  2010-05-31  2010-06-17  2010-07-07  2010-10-12  2010-11-29  2010-12-06  2010-12-13  2010-12-20  2011-01-03  2011-01-10  2011-01-17  2011-01-24  2011-02-01  2011-02-14  2011-02-21  2011-02-28  2011-03-07  2011-03-23  2011-03-28  2011-04-04  2011-04-06  (+29 more)
doc/misc/: decisions  deska-architecture-and-components.tex  fzu-scheme.xmi  pgpython  pgsql-setup  protocol-design  protocol-json.py
doc/spec/: spec.tex  spec.txt
doc/technical/: .gitignore  CMakeLists.txt  acknowledgement.tex  admin-dbscheme.tex  automated-tests.tex  building.tex  cd-structure.tex  cfg-generators.tex  cli-app.tex  cli-usage.tex  conclusion.tex  dbapi-protocol.tex  deska-db.tex  deska-intro.tex  deska-server.tex  deska.tex  dev-structure.tex  existing-tools.tex  fzu-setup.tex  img-deska-cli-parser.dia  img-deska-cli.dia  img-deska-components.dia  img-deska-server-components.dia  img-deska-workflow.dia  intro.tex  objects-and-relations.tex  patches.tex  prog-cpp-deskadb.tex  python-bindings.tex  references.bib  running-config-generators.tex  server-py.tex  sql-gen-example.tex  sql-procedures.tex  tests.tex  uncompressed.dia  users-intro.tex
install/: create_0.sql  create_1.sql  create_2.sql  create_schemas_0.sql  create_schemas_1.sql  create_schemas_2.sql  create_tables.sql  deska-deploy-database.sh  deska-unsupported-nuke-db.sh  deska_install.sh  drop_0.sql  drop_1.sql  pgtap.sql
install/modules/: cpu_type.sql  hardware.sql  host.sql  hwbox.sql  interface.sql  network.sql  service.sql  switch.sql  vendor.sql
qml2svg/: Qml2Image.cpp  Qml2Image.h
scripts/: deska-demo.sh
scripts/add-ons/: host-power
scripts/config-generators/: 01-demo  02-dhcp  02-dhcp-dns  03-text-draw-rack  04-qml-rack  05-services  06-hw-management
src/deska/: Flags.h
src/qml2image/: CMakeLists.txt  Qml2Image.cpp  main.cpp  qml2svg.pro
tests/: CMakeLists.txt  CliConfigTest.cpp  CliConfigTest.h  CliFunctionDefinitions.h  CliTestFixture.cpp  CliTestFixture.h  FuzzyDeskaValue.h  JsonApiTestFixture.cpp  JsonApiTestFixture.h  MockCliEvent.cpp  MockCliEvent.h  MockParserEvent.cpp  MockParserEvent.h  MockStreamBuffer.h  ParserTestFixture.cpp  ParserTestFixture.h  automated-run.cmake  cli-interaction.py  deska-cli-tester.sh  deska_io_log-380  fake_streambuf.h  farm-example.dump  fix_boost_test_sigchld.h  prepare-git-repo.sh  test_api_filters.cpp  test_cfggen_git_simple  test_cli-io.cpp  test_cli_io.cpp  test_cli_parser.cpp  test_json_api_parser.cpp  test_json_caching_api.cpp  test_mock_streambuf.cpp  test_parser-mock-objects.cpp  test_parser-top-level-objects.cpp  test_parser_mock_objects.cpp  valgrind.supp
tests/cli-interaction/: 436  437  create-nested  filters-create  sample
tests/dbapi-application/: LowLevelPyDeska_Api.py  LowLevelPyDeska_Values.py  apiUtils.py  concurrent-versioning.py  config_generators.py  createDelRestore.py  createObjects.py  createObjects_autoname.py  dbScheme.py  diffing-deleted-parent.py  diffing-embedded.py  diffing-identifier-set.py  diffing-simple.py  diffing.py  fuzzying.py  fzuBatchedChanges.py  fzuContainable.py  fzuRegressions.py  fzuTemplates.py  kindNames.py  multipleObjectData.py  pendingChangesets.py  persist_kindInstances.py  persist_metadata.py  persist_versioning.py  pydeska_basic_filters.py  pydeska_identifier_set.py  rebaseChangeset.py  setGetData.py  simple_filtering.py  templates.py  test_1_kindInstances.py  testdbapi.py
tests/dbapi-persist/: deskatest.py  test_1_kindInstances.py  test_1_metadata.py  test_1_objectData.py  test_1_versioning.py  test_2_diff.py  test_2_filter.py  test_2_objectData.py  tester.py  testutils.py
tests/sql/: .gitignore  test_diff_identifier_set.sql  test_empty.sql  test_fn-get-schema.sql  test_mod_templated_id_set.sql  test_resolved_diff_identifier_set.sql  test_set_attribute.sql  test_set_identifier_set.sql  test_set_name.sql  test_template.sql  test_template_data_origin.sql  test_template_embed.sql  test_template_embed_data_origin.sql  test_template_identifier_set.sql  test_template_identifier_set_data_origin.sql  test_undel.sql  test_versioned-data.sql  test_versioning-one-user.sql  test_versioning-pendingchangeset.sql  test_versioning-pendingchangeset_data.sql  test_versioning-two-users.sql  util-cmake-options-template.sh  util-config.sh  util-create-database.sh  util-create-shared-roles.sh  util-delete-database.sh  util-include-path.sql  util-manage-git.sh  util-run-testcase.sh  util-switch-user.sql
(+344 files in other folders)
